# fillit

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard_handler.rs  command.rs  config.rs  keyboard_handler.rs  lib.rs  main.rs  snippet.rs  snippet_settings.rs  typing.rs
src-tauri/test_sql/: snippet_tests.sql
src/components/: Dashboard.tsx  EmptyState.tsx  Header.tsx  Settings.tsx  Sidebar.tsx  SnippetEditor.tsx  SnippetList.tsx  StatsCard.tsx  ThemeProvider.tsx  ThemeToggle.tsx  theme-provider.tsx
